--- a/projet.html
+++ b/projet.html
@@ -26,9 +26,12 @@
 	de jouer au jeu "Devine l'image". Il disposera de 5 thèmes, pour chacun des thèmes,
 	 il y aura 5 images à deviner.</p>
 <h2>Fichiers du projet</h2>
-
+<ul>
+	<li><a href="projet.zip"> Projet </a></li>
+</ul>
+	
 <h2>Accueil & Rapport</h2>
-<ul class="special">
+<ul>
 	<li><a href="index.html"> Page d'accueil</a></li>
 	<li><a href="rapport.html"> Mon rapport</a></li>
 </ul>
