--- a/rapport.html
+++ b/rapport.html
@@ -11,6 +11,16 @@
 <body>
 
 <h1> Rapport </h1>
+	
+<h2>Objectifs et motivations du projet</h2>
+	
+<p>Notre projet consiste à recréer sous une différente forme, le jeu « Deviner l’image » en le programmant sur python.
+
+Nous avons voulu créer différents modes de jeux (thèmes) pour le joueur avec 5 images à deviner par mode. Pour complexifier le jeu, ce dernier proposera d’abord au joueur une image avec un effet « pixelisé » lorsque l’image devient plus difficile à deviner ou en cachant une certaine partie de l’image comme avec les drapeaux.
+Pour intégrer au programme des notions étudiées en cours nous avons mis en place dans le programme, un trieur permettant de trier par ordre croissant de score les différents résultats sous forme « nom : score » enregistrés préalablement par le programme à l’issue de chaque partie enregistrée par le joueur.
+
+Nous avons également souhaité en apprendre davantage sur la programmation dans le langage informatique Python.
+</p>
 
 <h2>Accueil & Projet</h2>
 <ul class="special">
