--- a/rapport.html
+++ b/rapport.html
@@ -118,7 +118,7 @@ La fonction fais ensuite appel à la fonction « tri » et va afficher au joueur
 <h2>Accueil & Projet</h2>
 <ul class="special">
 	<li><a href="index.html"> Page d'accueil</a></li>
-	<li><a href="projet.html"> Mon projet</a></li>
+	<li><a href="projet1.html"> Mon projet</a></li>
 </ul>
 
 </body>
