--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <h2>Projet</h2>
 <ul class="special">
-	<li><a href="projet.html"> Mon projet</a></li>
+	<li><a href="projet1.html"> Mon projet</a></li>
 	<li><a href="rapport.html"> Mon rapport</a></li>
 </ul>
 
