--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
 
 <p> Courte présentation :
 	<ul>
-		<li>Age : 17</li>
-		<li>Classe : 1ère GE</li>
+		<li>Âge : 17</li>
+		<li>Lycée : Lycée international de Saint-Genis-Pouilly</li>
 	</ul>
 </p>
 
-<p> Spécialités
+<p> Coordonnées : 
 	<ul>
-		<li><strong>NSI</strong></li>
-		<li>Mathématiques</li>
-		<li>SES</li>
+		<li>Numéro de téléphone : (+41)774888721</li>
+		<li>Adresse email : moh.bkdm@gmail.com</li>
+		<li>Ville : Versoix, 1290</li>
 	</ul>
 </p>
 
-<h2>Projet</h2>
+<h2>CV</h2>
 <ul class="special">
-	<li><a href="projet1.html"> Mon projet</a></li>
-	<li><a href="rapport.html"> Mon rapport</a></li>
+	<li><a href="BoukadoumMohamedCV.pdf"> Mon CV</a></li>
 </ul>
 
 
