--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-	<title> Mohamed Boukadoum </title>
+	<title> Dhermil </title>
 	<meta charset = "utf-8"/>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -21,15 +21,13 @@
 
 <p> Coordonnées : 
 	<ul>
-		<li>Numéro de téléphone : (+41)774888721</li>
 		<li>Adresse email : moh.bkdm@gmail.com</li>
-		<li>Ville : Versoix, 1290</li>
 	</ul>
 </p>
 
 <h2>CV</h2>
 <ul class="special">
-	<li><a href="BoukadoumMohamedCV.pdf"> Mon CV</a></li>
+	<li><a href="Dhermil.pdf"> Mon CV</a></li>
 </ul>
 
 
