--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-<h1> Page personnelle de Mohamed Boukadoum </h1>
+<h1> Page personnelle de Dhermil </h1>
 
 <p> Courte présentation :
 	<ul>
-		<li>Âge : 17</li>
-		<li>Lycée : Lycée international de Saint-Genis-Pouilly</li>
+		<li>Âge : 18</li>
+		
 	</ul>
 </p>
 
