--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	</ul>
 </p>
 
-<h2>CV</h2>
+<h2>Mes projets python : (n'oubliez pas d'installer Python sur votre appareil !)</h2>
 <ul class="special">
-	<li><a href="Dhermil.pdf"> Mon CV</a></li>
+	<li><a href="devine_le_chiffre.py"> Devine le chiffre </a></li>
 </ul>
 
 
