--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <h2>Mes projets python : (n'oubliez pas d'installer Python sur votre appareil !)</h2>
 <ul class="special">
-	<li><a href="capture1.png"> Devine le chiffre </a></li>
+	<li><a href="devine_le_chiffre.py"> Devine le chiffre </a></li>
 </ul>
 
 
