--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
 
 <body>
 
-<h1> Page personnelle de Dhermil </h1>
+<h1> Page de Dhermil </h1>
 
-<p> Courte présentation :
+<p> <h2>Qui suis-je ? </h2> :
 	<ul>
-		<li>Âge : 18</li>
+		<li>Âge : 18 </li>
+		<li>Études : à venir </li>
+		<li>Continent : Europe </li>
+		
 		
 	</ul>
 </p>
 
-<p> Coordonnées : 
-	<ul>
-		<li>Adresse email : moh.bkdm@gmail.com</li>
-	</ul>
-</p>
 
-<h2>Mes projets python : (n'oubliez pas d'installer Python sur votre appareil !)</h2>
+<h2>Mes projets python : (n'oubliez pas d'installer Python sur votre appareil !) </h2>
 <ul class="special">
 	<li><a href="devine_le_chiffre.py"> Devine le chiffre </a></li>
 </ul>
-
+	
+	
+<p> Coordonnées : 
+	<ul>
+		<li> Adresse email : moh.bkdm@gmail.com </li>
+	</ul>
+</p>
 
 
 </body>
