--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <h1> Page de Dhermil </h1>
 
-<p> <h2>Qui suis-je ? </h2> :
+<p> <h2>Qui suis-je ? </h2>
 	<ul>
 		<li>Âge : 18 </li>
 		<li>Études : à venir </li>
