--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <h2>Mes projets python : (n'oubliez pas d'installer Python sur votre appareil !) </h2>
 <ul class="special">
-	<li><a href="devine_le_chiffre.py"> Devine le chiffre </a></li>
+	<li><a href="Devine le chiffre.zip"> Devine le chiffre </a></li>
 </ul>
 	
 	
