--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-<h1> Page de Dhermil </h1>
+<h1> Dhermil </h1>
 
-<p> <h2>Qui suis-je ? </h2>
+<p> <h2> Who am I ? </h2>
 	<ul>
-		<li>Âge : 18 </li>
-		<li>Études : à venir </li>
+		<li>Age : 18 </li>
+		<li>Study : soon </li>
 		<li>Continent : Europe </li>
 		
 		
@@ -23,15 +23,16 @@
 </p>
 
 
-<h2>Mes projets python : (n'oubliez pas d'installer Python sur votre appareil !) </h2>
+<h2>My python projects : (Don't forget to install <a href"https://www.python.org/downloads/">python</a> on your device) </h2>
 <ul class="special">
-	<li><a href="Devine le nombre.zip"> Devine le chiffre </a></li>
+	<li><a href="Guess the number.zip"> Guess the number </a></li>
+	<li><a href="Guess the picture.zip"> Guess the picture </a> (Don't look at the pictures and their names in the folder, execute directly the game.py file)</li>
 </ul>
 	
 	
-<p> Coordonnées : 
+<p> Contact : 
 	<ul>
-		<li> Adresse email : moh.bkdm@gmail.com </li>
+		<li> Email adress : moh.bkdm@gmail.com </li>
 	</ul>
 </p>
 
