--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </p>
 
 
-<h2>My python projects : (Don't forget to install <a href="https://www.python.org/downloads/">python</a> on your device) </h2>
+<h2>My python projects :</h2>
 <ul class="special">
 	<li><a href="Guess the number.zip"> Guess the number </a></li>
 </ul>
