--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 </p>
 
 
-<h2>My python projects :</h2>
+<h2>My python projects : (Don't forget to install python on your device) </h2>
 <ul class="special">
 	<li><a href="Guess the number.zip"> Guess the number </a></li>
+	<li><a href="Guess the picture.zip"> Guess the picture </a> (Don't look at the pictures and their names in the folder, execute directly the game.py file)</li>
 </ul>
 	
 	
