--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <p> <h2> Who am I ? </h2>
 	<ul>
-		<li>Age : 18 </li>
-		<li>Study : soon </li>
+		<li>Age : 19 </li>
+		<li>Study : Mathematics </li>
 		<li>Continent : Europe </li>
 		
 		
