--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <p> <h2> Who am I ? </h2>
 	<ul>
 		<li>Age : 19 </li>
-		<li>Study : Mathematics </li>
-		<li>Continent : Europe </li>
+		<li>Math student </li>
 		
 		
 	</ul>
