--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <ul class="special">
 	<li><a href="Guess the number.zip"> Guess the number </a></li>
 	<li><a href="Guess the picture.zip"> Guess the picture </a> (Extract the folder and don't look at the pictures and their names in the folder, execute directly the game.py file)</li>
-	<li><a href="Snake.zip"> Snake </a> (You need to pip install the pynput module before.)</li>
+	<li><a href="snake.zip"> Snake </a> (You need to pip install the pynput module before.)</li>
 </ul>
 	
 	
