--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 
 <head>
-	<title> Dhermil </title>
+	<title> DisciplinedMen </title>
 	<meta charset = "utf-8"/>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<h1> Dhermil </h1>
+<h1> DisciplinedMen </h1>
 
 <p> <h2> Who am I ? </h2>
 	<ul>
